minor fix to tooltip overlapping modal and calendar container width

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,3 +19,7 @@ body {
 .content-body {
   padding-bottom: 40px;
 }
+
+.tooltip {
+  z-index: 1000 !important;
+}
