--- a/src/styles/sassets/content-modal.scss
+++ b/src/styles/sassets/content-modal.scss
@@ -26,3 +26,7 @@
     width: 24px;
     padding: 0 !important;
 }
+
+.modal {
+    z-index: 9999;
+}
